--- a/config/database.yml
+++ b/config/database.yml
@@ -41,7 +41,7 @@ production:
   adapter: mysql
   encoding: utf8
   reconnect: false
-  database: billify_production
+  database: pixelprinter_production
   pool: 5
   username: root
   password: 
