FIX: Using shop#url instead of shop#name to save and identify the Shop locally.

--- a/test/fixtures/shops.yml
+++ b/test/fixtures/shops.yml
@@ -1,4 +1,4 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 germanbrownies:
-  name: German Brownies
+  url: german-brownies.myshopify.com
