--- a/test/fixtures/print_templates.yml
+++ b/test/fixtures/print_templates.yml
@@ -3,9 +3,9 @@ invoice:
   name: Invoice
   body: "Thanks for buying from {{ shop_name }}"
   
-package_slip:
+packing_slip:
   shop: germanbrownies
-  name: Package Slip
+  name: Packing Slip
   body: "The package will be sent to {{ shipping_address.street }}..."
   
 quotation_mark_in_title:
