New feature: versions for templates. More: * updated all default templates to fix minor bugs * added rake task to delete versions older than 3 months * added a migration to automatically update users old (unchanged) templates * automatically redirect to authenticate action when coming from Shopify (now allows using PixelPrinter from multiple shops in the same browser) * added more tests and fixed all * added FavIcon (thanks, Mark)

--- a/test/fixtures/print_templates.yml
+++ b/test/fixtures/print_templates.yml
@@ -1,14 +1,22 @@
 invoice:
+  id: 1
   shop: germanbrownies
   name: Invoice
   body: "Thanks for buying from {{ shop_name }}"
   
 packing_slip:
+  id: 2
   shop: germanbrownies
   name: Packing Slip
   body: "The package will be sent to {{ shipping_address.street }}..."
   
 quotation_mark_in_title:
+  id: 3
   shop: germanbrownies
   name: Template's stuff
   body: "The body is not problematic"
+  
+custom_invoice:
+  shop: othershop
+  name: Custom invoice
+  body: "Thanks for buying from {{ shop_name }}"
