Integrated Hoptoad exception notification. More:   * Better error message when order or template can't be found   * Hoptoad API key is added through heroku key interface (command line tool)   * Extracted Shopify API key and secret also to heroku key interface (add via command line tool)

--- a/config/shopify.yml
+++ b/config/shopify.yml
@@ -27,5 +27,5 @@ test:
   secret: 0097fecade04110b5c7e20a7e9fdd5a7
 
 production:
-  api_key: <%= ENV[:SHOPIFY_API_KEY] %>
-  secret: <%= ENV[:SHOPIFY_API_KEY] %>
+  api_key: <%= ENV['SHOPIFY_API_KEY'] %>
+  secret: <%= ENV['SHOPIFY_API_SECRET'] %>
