--- a/config/shopify.yml
+++ b/config/shopify.yml
@@ -27,5 +27,5 @@ test:
   secret: 0097fecade04110b5c7e20a7e9fdd5a7
 
 production:
-  api_key: <%= ENV['SHOPIFY_API_KEY'] %>
+  api_key: 410f012da1a66227d7a926416b3f8fae
   secret: <%= ENV['SHOPIFY_API_SECRET'] %>
